[package]
name = "chord"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "chord"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.80"
cached = { version = "0.51.3", features = ["async"] }
chord-types = { path = "../chord-types" }
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
log = "0.4.21"
log4rs = "1.3.0"
prost = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-macros = "2.3.0"
toml = "0.8.13"
tonic = { version = "0.11.0", features = ["tls"] }
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
cargo-emit = "0.2.1"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
prost-build = "0.12.4"
tonic-build = "0.11.0"
walkdir = "2.5.0"
